--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [
       {
-        "src": "vite.config.js",
+        "src": "package.json",
         "use": "@vercel/static-build",
         "config": {
           "distDir": "dist"
@@ -10,8 +10,8 @@
     ],
     "routes": [
       {
-        "src": "/Portfolioo/(.*)",
-        "dest": "/Portfolioo/index.html"
+        "src": "/(.*)",
+        "dest": "/index.html"
       }
     ]
   }
